--- a/frontend/src/components/header/HeaderAdult/Header.css
+++ b/frontend/src/components/header/HeaderAdult/Header.css
@@ -58,6 +58,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  margin-right: 100px;
   gap: 20px; /* Añade espacio uniforme entre elementos */
 }
 
