--- a/frontend/src/components/Landings/LandingAdult/LandingPage.css
+++ b/frontend/src/components/Landings/LandingAdult/LandingPage.css
@@ -1,8 +1,20 @@
 
 .landingContainer {
+  margin: 0;
+  padding: 0;
   background-image: url("../../images/Fondo-Adult.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 100%;
+  width: 100%; /* Asegura que ocupe todo el ancho */
 }
+
+@media (max-width: 768px) {
+  .landingContainer {
+    background-position: center; /* Centra la imagen en pantallas más pequeñas */ 
+    height: 150vh; /* Ajusta la altura del contenedor en pantallas más pequeñas */
+    padding: 5px; /* Añade un poco de relleno para asegurar que el contenido no se salga */
+  }
+}
+
